Manage correctly errors and filenames with spaces